PyMaker/datas/object2/RawHTML/i8401/Python_DOC_referPages.with-for-in-a-single-line.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/6167127/how-to-put-multiple-statements-in-one-line">How to put multiple  statements in one line?</a>
<span class="question-originals-answer-count">
                    8 answers
                </span>
</li>
<li>
<a dir="ltr" href="/questions/2043453/executing-python-multi-line-statements-in-the-one-line-command-line">Executing Python multi-line statements in the one-line command-line</a>
<span class="question-originals-answer-count">
                    18 answers
                </span>
</li>
</ul>
</div>
<p>As a beginner python programmer, I am hoping this is some stupid error (or lack of understanding) that has an simple solution:</p>
<pre><code>/tmp&gt; python3 -c 'with open("t","r") as f: for l in f: print(l)'
  File "&lt;string&gt;", line 1
    with open("t","r") as f: for l in f: print(l)
                               ^
SyntaxError: invalid syntax
</code></pre>
<p>I can embed a newline in the oneline, but trying to understand why the above does not work</p>
<pre><code>/tmp&gt; python3 -c $'with open("t","r") as f:\n for l in f: print(l)'
Hi there
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Looking at the <a href="https://docs.python.org/3/reference/grammar.html" rel="nofollow noreferrer">Full grammar specification</a>, the only statements you're allowed to put immediately after a <code>with</code> statement on the same line, are statements in the <code>simple_stmt</code> class. </p>
<p>Relevant parts of the grammar:</p>
<pre><code>with_stmt: 'with' with_item (',' with_item)*  ':' suite
suite: simple_stmt | NEWLINE INDENT stmt+ DEDENT
simple_stmt: small_stmt (';' small_stmt)* [';'] NEWLINE
small_stmt: (expr_stmt | del_stmt | pass_stmt | flow_stmt |
             import_stmt | global_stmt | nonlocal_stmt | assert_stmt)
flow_stmt: break_stmt | continue_stmt | return_stmt | raise_stmt | yield_stmt
</code></pre>
<p>In plainer language, these statements appear to be:</p>
<ul>
<li>Expression statements</li>
<li>del</li>
<li>pass</li>
<li>break</li>
<li>continue</li>
<li>return</li>
<li>raise</li>
<li>yield</li>
<li>import</li>
<li>global</li>
<li>nonlocal</li>
<li>assert</li>
</ul>
<p><code>for</code> is not part of this list, so it is not allowed to come immediately after a <code>with</code> with no intervening newline.</p>
</div>
<span class="comment-copy">Why not <code>print '\n'.join(l for l in open("t"))</code>?</span>
<span class="comment-copy">You cannot have two <i>statements</i> in the same line.</span>
<span class="comment-copy">Or <a href="http://stackoverflow.com/questions/2043453/executing-python-multi-line-statements-in-the-one-line-command-line" title="executing python multi line statements in the one line command line">stackoverflow.com/questions/2043453/…</a></span>
<span class="comment-copy">@juanpa.arrivillaga, sure you can. For example, <code>if True: import math; pass; assert 2+2==4</code> has four statements on the same line.</span>
<span class="comment-copy">@Kevin Yes, you are correct, the term I needed to use was <i>simple statement</i>. Er, rather, you can't have two non-simple statements or non-small statements.</span>
